--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    api 'com.google.android.gms:play-services-maps:15.0.1'
+    api 'com.google.maps.android:android-maps-utils:0.5+'
+    api 'com.google.android.gms:play-services-location:15.0.1'
+    api 'com.google.android.gms:play-services-places:15.0.1'
+    api 'com.google.android.gms:play-services-nearby:15.0.1'
+
 }
