--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,13 @@ dependencies {
     api 'com.google.android.gms:play-services-location:15.0.1'
     api 'com.google.android.gms:play-services-places:15.0.1'
     api 'com.google.android.gms:play-services-nearby:15.0.1'
-    compile 'com.android.volley:volley:1.1.0'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    configurations.all {
+
+        resolutionStrategy.force 'com.android.support:support-annotations:27.1.1'
+
+    }
+
 }
