--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".MyApplication"
@@ -28,6 +29,10 @@
         <activity
             android:name=".View.sellingList"
             android:label="@string/title_activity_selling_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".View.SellanItem"
+            android:label="@string/title_activity_sellan_item"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
