--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".View.sellingList"
+            android:name=".View.productList"
             android:label="@string/title_activity_selling_list"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
-            android:name=".View.SellanItem"
+            android:name=".View.addProductActivity"
             android:label="@string/title_activity_sellan_item"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".View.SellerActivity">
