--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/myTheme">
         <activity
             android:name=".View.LoginActivity"
             android:label="@string/app_name">
@@ -36,7 +36,8 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".View.SellerActivity">
         </activity>
-        <activity android:name=".View.BuyerActivity">
+        <activity android:name=".View.BuyerActivity"
+            android:theme="@style/myTheme">
         </activity>
     </application>
 
