--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".View.SellerActivity">
         </activity>
+        <activity android:name=".View.navigationActivity"></activity>
         <activity android:name=".View.BuyerActivity"
             android:theme="@style/myTheme">
         </activity>
