--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,11 @@ dependencies {
     api 'com.google.android.gms:play-services-nearby:15.0.1'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
 
     configurations.all {
 
         resolutionStrategy.force 'com.android.support:support-annotations:27.1.1'
 
     }
-
 }
