--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,11 +40,11 @@
             android:name=".View.addProductActivity"
             android:label="@string/title_activity_sellan_item"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".View.SellerActivity"></activity>
+        <activity android:name=".View.SellerActivity" />
         <activity android:name=".View.navigationActivity" />
         <activity
             android:name=".View.BuyerActivity"
-            android:theme="@style/myTheme"></activity>
+            android:theme="@style/myTheme" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -62,11 +62,12 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".View.imagesActivity"></activity>
+        <activity android:name=".View.imagesActivity" />
         <activity
             android:name=".View.ProductDetail"
             android:label="@string/title_activity_product_detail"
-            android:theme="@style/myTheme.NoActionBar"></activity>
+            android:theme="@style/myTheme.NoActionBar" />
+        <activity android:name=".View.SendMessage"></activity>
     </application>
 
 </manifest>
