made the frame of message system and made some bugs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,9 @@
             android:name=".View.ProductDetail"
             android:label="@string/title_activity_product_detail"
             android:theme="@style/myTheme.NoActionBar" />
-        <activity android:name=".View.SendMessage"></activity>
+        <activity android:name=".View.SendMessage" />
+        <activity android:name=".View.MessageList_total" />
+        <activity android:name=".View.MessageList_byProduct"></activity>
     </application>
 
 </manifest>
